src/Templates/AdminPanel/Bit.AdminPanel/src/Client/Core/Pages/Products/CreateEditProductModal.razor.scss
@import '../../Styles/abstracts/_functions.scss';
@import '../../Styles/abstracts/_colors.scss';
@import '../../Styles/abstracts/_media-queries.scss';

.main-container {
    display: flex;
    width: rem(560px);
    align-items: center;
    flex-direction: column;
    min-height: rem(378px);
    box-sizing: border-box;
    border-radius: rem(2px);
    background-color: $White;
    justify-content: flex-start;
    padding: rem(16px) rem(24px);

    .bit-ios & {
        padding: rem(16px) rem(24px) env(safe-area-inset-bottom);
    }

    @include sm {
        left: 0;
        bottom: 0;
        width: 100%;
        position: fixed;
        border-radius: rem(8px) rem(8px) 0 0;
    }
}

.header {
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    margin-bottom: rem(24px);
}

.title {
    font-weight: 600;
    font-size: rem(20px);
    line-height: rem(28px);
    color: $Gray190;
}

.form-input-container {
    width: 100%;
    margin-bottom: rem(24px);
}

::deep .validation-message {
    color: $StatusErrorColor;
}

